decal-macros/tests/ui/fail/multiple_roots.rs
use decal::decal;

fn main() {
    let _ = decal! {
        Row {
            Text("one")
        }

        Column {
            Text("two")
        }
    };
}
